# QCatGrayQuick

./: .gitmodules  CMakeLists.txt  README.md
cmake/: QtConfig.cmake
examples/catgrayquicktest/: CMakeLists.txt  main.cpp
examples/catgrayquicktest/resources/qml/: main.qml
examples/qrencodeqml/: CMakeLists.txt  main.cpp
src/QCatGrayQuickChatModel/: CMakeLists.txt  QCatGrayChatStruct.cpp  QCatGrayChatStruct.h  QCatGrayQuickChatModel.cpp  QCatGrayQuickChatModel.h
src/QCatGrayQuickQrenCodeQml/: CMakeLists.txt  QCatGrayQuickQrenCodeQml.cpp  QCatGrayQuickQrenCodeQml.h
src/QCatGrayQuickTableViewModel/: CMakeLists.txt  QCatGrayQuickTableViewHeaderStruct.cpp  QCatGrayQuickTableViewHeaderStruct.h  QCatGrayQuickTableViewModel.cpp  QCatGrayQuickTableViewModel.h  QCatGrayQuickTableViewModelStruct.cpp  QCatGrayQuickTableViewModelStruct.h
src/qml/: CMakeLists.txt  QCatGrayQuickPlugins.cpp  QCatGrayQuickPlugins.h
src/qml/QCatGrayQt5Compat/QCatGrayQuick/: QCatGrayQuick.qrc  qmldir
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/: QCatGrayQuickMethod.js
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatAnimation/: ImageFlicker.qml  ImageFlickerGradient.qml  ImageFlipable.qml  ImageMove.qml  ImageScale.qml  Marquee.qml  TextOneByOneShow.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatBasics/: CatBasicsText.qml  CatBasicsToolTip.qml  CatMessage.qml  CatRectangle.qml  CatTransArea.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatButton/: CatButton.qml  CatButtonImage.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatChat/: CatChatItemBase.qml  CatChatTextEdit.qml  CatChatView.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatGeneral/: CatFps.qml  DragSizeWidget.qml  DragWidget.qml  RotateCursor.qml  TemplateWidget.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatImage/: CatImageBase.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatInput/: IpTextInput.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatModule/: CatSorter.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatModule/CatSorter/: CatSorterButton.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatProgressBar/: ArcProgressBar.qml  ArcProgressBarCanvas.qml  BarTypeProgressBar.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/Qml/CatTableView/: CatTableView.qml  CatTableViewDelegateBase.qml  CatTableViewHeaderDelegateBase.qml  CatTableViewItemBase.qml
src/qml/QCatGrayQt5Compat/QCatGrayQuick/designer/: QCatGrayQuick.metainfo
src/qml/QCatGrayQt6Compat/QCatGrayQuick/: QCatGrayQuick.qrc  UpdateDesignerMetainfo.ps1  UpdateQmldirAndQrc.ps1  qmldir
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatAnimation/: ImageFlicker.qml  ImageFlickerGradient.qml  ImageFlipable.qml  ImageMove.qml  ImageScale.qml  Marquee.qml  TextOneByOneShow.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatBasics/: CatBasicsText.qml  CatBasicsToolTip.qml  CatMessage.qml  CatRectangle.qml  CatTransArea.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatButton/: CatButton.qml  CatButtonImage.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatChat/: CatChatItemBase.qml  CatChatTextEdit.qml  CatChatView.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatGeneral/: CatFps.qml  DragSizeWidget.qml  DragWidget.qml  RotateCursor.qml  TemplateWidget.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatImage/: CatImageBase.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatInput/: IpTextInput.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatModule/: CatSorter.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatModule/CatSorter/: CatSorterButton.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatProgressBar/: ArcProgressBar.qml  ArcProgressBarCanvas.qml  BarTypeProgressBar.qml
src/qml/QCatGrayQt6Compat/QCatGrayQuick/Qml/CatTableView/: CatTableView.qml  CatTableViewDelegateBase.qml  CatTableViewHeaderDelegateBase.qml  CatTableViewItemBase.qml
